# hydrates

./: .readthedocs.yaml  Changelog.txt  Known Issues.txt  README.md  conf.py  exampleScript.py  index.rst  pyproject.toml  requirements.txt  tests.py
.github/workflows/: workflow.yml
docs/: Component and Inhibitor IDs.rst  Example Project.rst  Functions.rst  Usage Examples.rst  conf.py  index.rst
src/: KlaudaSandlerLangParams.csv  KlaudaSandlerP_vap.csv  Salt Data.csv  c-C3H6 work.xlsx  componentData.csv  core.py  hydrateCellProperties.csv  interactionParameters.csv  model.py  tests.py
src/p2f_HydrateCalcLib/: model.py
src/p2f_hydrates/: Organic Inhibitor Data.csv  model.py
