[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "P2F-HYDRATES"
version = "0.1.0"
authors = [
  {name="Karsten Kunneman", email="karstenkunneman@protonmail.com"},
  {name="Amadeu K. Sum", email="asum@mines.edu"},
]
description = "A package providing functionality for the simulation of equilibrium and inhibition of clathrate hydrates"
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
license = "Attribution-ShareAlike 4.0 International"
license-files = "LICENSE.txt"

[project.urls]
Homepage = ""
Issues = ""